# qt-key-buddy

./: .gitignore  CMakeLists.txt  KeyBuddy.pro  README.md  app_icon.rc  install.bat  package.json  qtquickcontrols2.conf
scripts/: build-cmake.ps1  build.bat
src/: main.cpp
src/backend/: Backend.cpp  Backend.h  KeyHook.cpp  OverlayWindow.cpp  Screenshot.cpp  SystemMonitor.cpp
src/ui/: Main.qml
src/ui/components/: ActionButton.qml  AppCard.qml  KeyMapItem.qml  MonitorCard.qml  NavTabButton.qml  NavigationSidebar.qml  SettingsForm.qml
src/ui/pages/: CapturePage.qml  HomePage.qml  SettingsPage.qml  SystemInfoPage.qml
src/ui/store/: AppStore.qml  Theme.qml
